TEST_PROGRAMS/INVALID/03/invalid_for6.go
package main
func main() {
	for {
	}
	// "While" loop
	for x < 10 {
	}
	for ; x > 10; x=x+1 {
	}
	for x > 10; x=+1 { // missing first section
	}
}
